test/testdata/e2e/kafka_style_multi_broker/tcp-echo-servers.yaml
# Simulates 3 Kafka brokers using tcp-echo servers
# Each broker responds with its unique identifier
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-1
  labels:
    app: kafka-broker-1
spec:
  ports:
    - name: tcp
      port: 9092
  selector:
    app: kafka-broker-1
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-2
  labels:
    app: kafka-broker-2
spec:
  ports:
    - name: tcp
      port: 9092
  selector:
    app: kafka-broker-2
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-3
  labels:
    app: kafka-broker-3
spec:
  ports:
    - name: tcp
      port: 9092
  selector:
    app: kafka-broker-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-1
  template:
    metadata:
      labels:
        app: kafka-broker-1
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: ["9092", "broker-1"]
          ports:
            - containerPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-2
  template:
    metadata:
      labels:
        app: kafka-broker-2
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: ["9092", "broker-2"]
          ports:
            - containerPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-3
  template:
    metadata:
      labels:
        app: kafka-broker-3
    spec:
      containers:
        - name: tcp-echo
          image: docker.io/istio/tcp-echo-server:1.3
          imagePullPolicy: IfNotPresent
          args: ["9092", "broker-3"]
          ports:
            - containerPort: 9092
