test/testdata/e2e/kafka_style_multi_broker/virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: kafka-multi-broker
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: kafka-multi-broker
